--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_ENV="local"
 
 # QA
-MYSQL_DATABASE="wallet"
-MYSQL_HOST="azr-mysqlflex8-qa.mysql.database.azure.com"
-MYSQL_PASS="0G!WfmR&@XdlgQJxmYCb"
-MYSQL_PORT="3306"
-MYSQL_USER="eos_azrqaadmin"
+MYSQL_DATABASE=""
+MYSQL_HOST=""
+MYSQL_PASS=""
+MYSQL_PORT=""
+MYSQL_USER=""
